# qa_guru_hw_16

./: .gitignore  README.md  pyproject.toml
